refactor: finish stub methods + improve docs